--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "electron-forge-ipfs-publisher",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
