--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-forge-ipfs-publisher",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "",
   "type": "module",
   "exports": {
@@ -23,6 +23,7 @@
     "@web-std/file": "^3.0.3",
     "@web3-storage/w3up-client": "^13.1.1",
     "debug": "^4.3.4",
+    "fake-indexeddb": "^6.0.0",
     "fs-extra": "^11.2.0",
     "mime": "^4.0.3",
     "typescript": "^5.4.5",
