--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "CommonJS",
         "noEmit": false,
         "noFallthroughCasesInSwitch": true,
         "noUnusedLocals": true,
@@ -14,7 +13,7 @@
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "strict": true,
-        "target": "esnext",
+        "target": "ES2021",
         "outDir": "dist",
     },
     "exclude": [
