--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
-        "module": "CommonJS",
+        "moduleResolution": "Bundler",
+        "module": "ESNext",
         "noEmit": false,
         "noFallthroughCasesInSwitch": true,
         "noUnusedLocals": true,
